tests/baselines/reference/project/declarationsMultipleTimesImport/node/declarationsMultipleTimesImport.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== m4.ts (0 errors) ====
    export class d {
    };
    export var x: d;
    export function foo() {
        return new d();
    }
    
==== useModule.ts (0 errors) ====
    import m4 = require("m4"); // Emit used
    export var x4 = m4.x;
    export var d4 = m4.d;
    export var f4 = m4.foo();
    
    export module m1 {
        export var x2 = m4.x;
        export var d2 = m4.d;
        export var f2 = m4.foo();
    
        var x3 = m4.x;
        var d3 = m4.d;
        var f3 = m4.foo();
    }
    
    // Do not emit multiple used import statements
    import multiImport_m4 = require("m4"); // Emit used
    export var useMultiImport_m4_x4 = multiImport_m4.x;
    export var useMultiImport_m4_d4 = multiImport_m4.d;
    export var useMultiImport_m4_f4 = multiImport_m4.foo();